claude tries to one shot

--- a/app/popup.html
+++ b/app/popup.html
@@ -13,11 +13,11 @@
   
         <div id="inputForm">
             <input class="textBox" id="inputval" type="text" maxlength="50"/>
-            <button id="submit" onclick="saveData();">Create</button>
+            <button id="submit">Create</button>
         </div>
  
        <p id="confirmation"></p> 
 
-        <script src="scripts/popup.js"></script>
+        <script src="scripts/popup.js" type="module"></script>
     </body>
 </html>
