--- a/app/settings.html
+++ b/app/settings.html
@@ -25,6 +25,6 @@
             </tr> 
         </table>
 
-        <script src="scripts/settings.js"></script>
+        <script src="scripts/settings.js" type="module"></script>
     </body>
 </html>
