change some things

--- a/app/settings.html
+++ b/app/settings.html
@@ -14,9 +14,9 @@
     <div id="content"> 
 
       <!-- Input form for a new redirect -->  
-      <h2 id="welcome">Welcome to Redirect!</h2>
+      <h2 id="welcome">Welcome to Peregrine!</h2>
       <p id="infoRedirect">
-      Redirect is a Chrome extension that makes it easy to navigate 
+      Peregrine is a Chrome extension that makes it easy to navigate 
       to custom urls. Users can save keys that map to saved urls. 
       Typing ";" (a semicolon), then a space, and then the saved key into the address bar 
       opens a user's saved url in the browser.
