use more of the original stuff

--- a/app/settings.html
+++ b/app/settings.html
@@ -24,7 +24,7 @@
 
       <!-- Input form for a new redirect -->  
       <h1>Create a new Redirect</h1>
-      <form id="inputForm" action="javascript:createRedirect()" method="">
+      <form id="inputForm" method="">
         <input class="textBox" id="inputval" placeholder="redirect shortcut" type="text"/>
         <input class="textBox" id="url" placeholder="url" type="text"/>
         <button id="new" class="btn btn-outline-primary btn-sm">Create new redirect</button>
