get working again after my changes

--- a/app/popup.html
+++ b/app/popup.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <script src="scripts/common.js"></script>
+    <script src="scripts/common.js" type="module"></script>
 
     <!-- Input form for a new redirect --> 
     <h1 id='heading'>Create a shortcut for this url?</h1>
@@ -52,6 +52,6 @@
     <div id='settingsDiv'>
       <p id='settingsID'><a href="#" id="settings">Settings</a></p>
     </div>
-    <script src="scripts/popup.js"></script>
+    <script src="scripts/popup.js" type="module"></script>
   </body>
 </html>
