--- a/app/settings.html
+++ b/app/settings.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <script src="scripts/common.js"></script>
+    <script src="scripts/common.js" type="module"></script>
     <div id="content"> 
 
       <!-- Input form for a new redirect -->  
@@ -49,6 +49,6 @@
       </table>
     </div>
 
-    <script src="scripts/settings.js"></script>
+    <script src="scripts/settings.js" type="module"></script>
   </body>
 </html>
