--- a/app/popup.html
+++ b/app/popup.html
@@ -15,8 +15,7 @@
     <!-- Input form for a new redirect --> 
     <h1 id='heading'>Create a shortcut for this url?</h1>
     <div id='formDiv'>
-      <form id="inputForm" method=""
-                                                          autocomplete="off">
+      <form id="inputForm" method="" autocomplete="off">
         <input class="textBox" id="inputval" type="text">
         <button id='submit' class="btn btn-outline-primary btn-sm">Create</button>
       </form> 
